# dlab

./: .gitignore  README.md  pyproject.toml  requirements.txt  roadmap.py  sweep.py  train.py
configs/: sweep.yaml  train.yaml
configs/dataset/: cifar10.yaml  fashion_mnist.yaml  mnist.yaml
configs/experiment/: autoencoder_research.yaml  cifar10_resnet18.yaml  cnn_depth.yaml  fashion_mnist_cnn.yaml  mnist_autoencoder.yaml  mnist_cnn.yaml  mnist_mlp.yaml  mnist_mlp_aug_affine_10deg_t05.yaml  mnist_mlp_aug_affine_10deg_t05_s09_11.yaml  mnist_mlp_aug_affine_10deg_t10.yaml  mnist_mlp_aug_affine_15deg_t10_s09_11.yaml  mnist_mlp_aug_affine_5deg_t05.yaml  mnist_mlp_best.yaml  mnist_mlp_research.yaml  mnist_mlp_top1_bn_1024_d4_do0p1.yaml  mnist_mlp_top2_bn_1024_d3_do0p2.yaml  mnist_mlp_top3_no_bn_1024_d3_do0p1.yaml  mnist_vae.yaml  mnist_vqvae.yaml  optimization_lr.yaml  optimization_optimizer.yaml
configs/launcher/: modal.yaml  modal_gpu.yaml  runpod_flash.yaml
configs/model/: autoencoder.yaml  cnn.yaml  mlp.yaml  resnet18.yaml  vae.yaml  vqvae.yaml
configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
configs/roadmap/: default.yaml
configs/sweep/: batch_size.yaml  beta_vae.yaml  cnn_depth.yaml  cnn_width.yaml  latent_size.yaml  lr.yaml  mlp_arch.yaml  mlp_arch_confirm.yaml  mlp_aug_compact.yaml  mlp_aug_scheduler.yaml  mlp_batch_lr_confirm.yaml  mlp_batch_lr_interaction.yaml  mlp_batch_size_confirm.yaml  mlp_best_10seed_test_error.yaml  mlp_high_capacity_norm_phase1.yaml  mlp_high_capacity_top3_seed_confirm.yaml  mlp_lr.yaml  mlp_lr_seed.yaml  mlp_regularization.yaml  mlp_regularization_confirm.yaml  mlp_seed.yaml  mlp_smoothing_weight_avg.yaml  optimizer.yaml
configs/trainer/: debug.yaml  default.yaml
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
notebooks/: latent_space_analysis.ipynb  optimizer_analysis.ipynb  reconstruction_analysis.ipynb
reports/: example_report.md
scripts/: analyze.py  export_onnx.py
src/: __init__.py  roadmap.py
src/analysis/: __init__.py  runs.py  wandb.py
src/datasets/: __init__.py  registry.py  vision.py
src/execution/: __init__.py  experiment.py  launchers.py  modal_launcher.py  runpod_flash_app.py  runpod_flash_launcher.py
tests/: test_launchers.py  test_naming.py  test_roadmap.py  test_wandb_sweeps.py
(+22 files in other folders)
